{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 41,
  "lineage": "c084339e-bb7d-9742-09d0-8accf84d9f3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7a109bf30624c99",
            "arn": "arn:aws:ec2:us-east-1:767398014267:instance/i-0d0e164f1ce63512a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0e164f1ce63512a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8d1c2d4ad35c5c2",
            "private_dns": "ip-10-0-0-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02545e5b1e49cbed3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d163e4d3863f05af",
            "tags": {
              "Name": "itkmitl-Server0",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-Server0",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094f6eda6520a2966"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7a109bf30624c99",
            "arn": "arn:aws:ec2:us-east-1:767398014267:instance/i-000cc34ee4887cadc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000cc34ee4887cadc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08eb73ca2ac3623d3",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-033f5521743e0e83c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03bb106897f84c701",
            "tags": {
              "Name": "itkmitl-Server1",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-Server1",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094f6eda6520a2966"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:loadbalancer/app/web-elb/b6d053f1a643dc01",
            "arn_suffix": "app/web-elb/b6d053f1a643dc01",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1561007017.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398014267:loadbalancer/app/web-elb/b6d053f1a643dc01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0832a6c7007f4b44d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bb106897f84c701"
              },
              {
                "subnet_id": "subnet-0d163e4d3863f05af"
              }
            ],
            "subnets": [
              "subnet-03bb106897f84c701",
              "subnet-0d163e4d3863f05af"
            ],
            "tags": {
              "Name": "itkmitl-webLB",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-webLB",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:listener/app/web-elb/b6d053f1a643dc01/7983754bd82aa05e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398014267:listener/app/web-elb/b6d053f1a643dc01/7983754bd82aa05e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:loadbalancer/app/web-elb/b6d053f1a643dc01",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "itkmitl-lbListener",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-lbListener",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30",
            "arn_suffix": "targetgroup/tf-target-group/19d793d677f58c30",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "itkmitl-tgp",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-tgp",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "dependencies": [
            "aws_lb.webLB",
            "aws_security_group.elb-sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30-20240315033356520100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30",
            "target_id": "i-0d0e164f1ce63512a"
          },
          "dependencies": [
            "aws_instance.Servers",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30-20240315033357007400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398014267:targetgroup/tf-target-group/19d793d677f58c30",
            "target_id": "i-000cc34ee4887cadc"
          },
          "dependencies": [
            "aws_instance.Servers",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:security-group/sg-094f6eda6520a2966",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094f6eda6520a2966",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "npaWk11_demo",
            "name_prefix": "",
            "owner_id": "767398014267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-serverSG",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-serverSG",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:security-group/sg-0832a6c7007f4b44d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0832a6c7007f4b44d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "767398014267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-elbSG",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-elbSG",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:network-acl/acl-009716325c02a092b",
            "default_network_acl_id": "acl-009716325c02a092b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-009716325c02a092b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398014267",
            "subnet_ids": [
              "subnet-03bb106897f84c701",
              "subnet-0d163e4d3863f05af"
            ],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:route-table/rtb-0cc775f815f7f3756",
            "default_route_table_id": "rtb-0cc775f815f7f3756",
            "id": "rtb-0cc775f815f7f3756",
            "owner_id": "767398014267",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:security-group/sg-0dad7ef31e1714502",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dad7ef31e1714502",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398014267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:internet-gateway/igw-05c70e7f81a58fa46",
            "id": "igw-05c70e7f81a58fa46",
            "owner_id": "767398014267",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c70e7f81a58fa46",
            "id": "r-rtb-0467ac8b7ac316c641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0467ac8b7ac316c64",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:route-table/rtb-0467ac8b7ac316c64",
            "id": "rtb-0467ac8b7ac316c64",
            "owner_id": "767398014267",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c70e7f81a58fa46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22a900ef22d1e1a",
            "route_table_id": "rtb-0467ac8b7ac316c64",
            "subnet_id": "subnet-0d163e4d3863f05af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f67520be893ef0e",
            "route_table_id": "rtb-0467ac8b7ac316c64",
            "subnet_id": "subnet-03bb106897f84c701"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:subnet/subnet-0d163e4d3863f05af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d163e4d3863f05af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398014267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:subnet/subnet-03bb106897f84c701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bb106897f84c701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398014267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "vpc_id": "vpc-0db2c135288c7b0a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398014267:vpc/vpc-0db2c135288c7b0a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009716325c02a092b",
            "default_route_table_id": "rtb-0cc775f815f7f3756",
            "default_security_group_id": "sg-0dad7ef31e1714502",
            "dhcp_options_id": "dopt-0051ecd027c7fbce2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db2c135288c7b0a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc775f815f7f3756",
            "owner_id": "767398014267",
            "tags": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            },
            "tags_all": {
              "Name": "itkmitl-VPC",
              "itclass": "NPA2024",
              "itgroup": "year3"
            }
          }
        }
      ]
    }
  ]
}